add api fix checkbox

--- a/app.html
+++ b/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +10,14 @@
     <div class="page">
       <h1 class="title">Progress</h1>
       <section class="progress-bar">
-        <svg class="progress-bar__ring" width="120" height="120">
-          <circle class="progress-bar__circle" stroke="#005EFE" stroke-width="10" cx="60" cy="60" r="55" fill="transparent" />
+        <svg class="progress-bar__ring">
+          <circle class="progress-bar__circle" cx="60" cy="60" r="55" />
         </svg>
         <div class="progress-bar__control">
           <ul class="progress-bar__inputs-list">
             <li class="progress-bar__input">
                 <input type="number" class="progress-bar__percent-input" >
-                <span class="progress-bar__input-name">Value</span>
+                <span class="progress-bar__input-name" >Value</span>
             </li>
             <li class="progress-bar__input">
               <label class="progress-bar__label">
@@ -37,6 +37,9 @@
         </div>
       </section>
     </div>
-    <script src="./app.js"></script>
+    <script type="module" src="./api.js"></script>
+    <script type="module" src="./utils/constants.js"></script>
+    <script type="module" src="./utils/utils.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
