add regex for percent, add utils, add error span

--- a/app.html
+++ b/app.html
@@ -17,7 +17,8 @@
           <ul class="progress-bar__inputs-list">
             <li class="progress-bar__input">
                 <input type="number" class="progress-bar__percent-input" >
-                <span class="progress-bar__input-name" >Value</span>
+                <span class="progress-bar__percent-error">Что-то не так :(</span>
+                <p class="progress-bar__input-name" >Value</p>
             </li>
             <li class="progress-bar__input">
               <label class="progress-bar__label">
